--- a/AXI/AXI4_STREAM/examples/dd02_compare/doc/dd02_compare.lyx
+++ b/AXI/AXI4_STREAM/examples/dd02_compare/doc/dd02_compare.lyx
@@ -121,7 +121,7 @@ Diego Hdez (diego@symbioticeda.com)
 \begin_layout Standard
 \align center
 \begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="3">
+<lyxtabular version="3" rows="3" columns="3">
 <features tabularvalignment="middle">
 <column alignment="center" valignment="top">
 <column alignment="center" valignment="top">
@@ -162,6 +162,35 @@ Date
 </cell>
 </row>
 <row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+0.1
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Initial draft.
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+16/11/20
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
 <cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
 \begin_inset Text
 
@@ -175,7 +204,7 @@ Date
 \begin_inset Text
 
 \begin_layout Plain Layout
-Initial draft.
+Updated full working properties
 \end_layout
 
 \end_inset
@@ -184,7 +213,7 @@ Initial draft.
 \begin_inset Text
 
 \begin_layout Plain Layout
-16/11/20
+20/11/20
 \end_layout
 
 \end_inset
@@ -1080,7 +1109,7 @@ status open
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
 filename "../src/amba_axi4_stream_seda_verify.sv"
-lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={22-75},style={verilog-style},breaklines=true,frame=single"
+lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={23-75},style={verilog-style},breaklines=true,frame=single"
 
 \end_inset
 
@@ -2061,8 +2090,8 @@ Fix I: Assert failed in assert_SRC_OPTIONAL_TUSER_TIEOFF
 
 \begin_layout Standard
 The faxis_slave should implement the optional interface checks.
- For this specific issue the implementation could be as shown below, but
- is still incomplete since TUSER is not the only optional interface port:
+ For this specific issue the implementation could be as shown below, with
+ all optional TDATA checks implemented (unoptimised):
 \end_layout
 
 \begin_layout Standard
@@ -2077,7 +2106,7 @@ status open
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
 filename "../src/faxis_slave_fixed.sv"
-lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={253-255},style={verilog-style},breaklines=true,frame=single"
+lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={254-258},style={verilog-style},breaklines=true,frame=single"
 
 \end_inset
 
@@ -2122,7 +2151,7 @@ status open
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
 filename "../src/faxis_slave_fixed.sv"
-lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={166-168},style={verilog-style},breaklines=true,frame=single"
+lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={166-169},style={verilog-style},breaklines=true,frame=single"
 
 \end_inset
 
@@ -2167,7 +2196,7 @@ status open
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
 filename "../src/faxis_slave_fixed.sv"
-lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={124-138},style={verilog-style},breaklines=true,frame=single"
+lstparams "language=Verilog,basicstyle={\\footnotesize},numbers=left,numberstyle={\\footnotesize},linerange={124-139},style={verilog-style},breaklines=true,frame=single"
 
 \end_inset
 
